homework4 is ready for review